fix: [CDS-47647]: custom manifest (#41317)
* fix: [CDS-47647]: custom manifest

* fix: [CDS-47647]: adding log and changes regarding reviews

* fix: [CDS-47647]: Error changes

* fix: [CDS-47647]: Throw warning for logs only

* fix: [CDS-47647]: checkstyle